--- a/templates/otherpage.html
+++ b/templates/otherpage.html
@@ -79,5 +79,38 @@ body {margin:0;;}
 </div>
 
 <p>filler page for testing nav bar</p>
+
+<table>
+
+    <tr>
+        <form>
+        <th> <input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; formaction = '/a1'/> </th>
+        <th><input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; inputName="firstButton" formaction=a2 /></th>
+        <th><input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; inputName="firstButton" formaction=a3 /></th>
+        <th><input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; inputName="firstButton" formaction=a4 /></th>
+        </form>
+    </tr>
+    <tr>
+        <th><input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; inputName="firstButton" formaction=b1 /></th>
+        <th><input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; inputName="firstButton" formaction=b2 /></th>
+        <th><input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; inputName="firstButton" formaction=b3 /></th>
+        <th><input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; inputName="firstButton" formaction=b4 /></th>
+    </tr>
+    <tr>
+        <th><input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; inputName="firstButton" formaction=c1 /></th>
+        <th><input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; inputName="firstButton" formaction=c2 /></th>
+        <th><input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; inputName="firstButton" formaction=c3 /></th>
+        <th><input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; inputName="firstButton" formaction=c4 /></th>
+    </tr>
+    <tr>
+        <th><input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; inputName="firstButton" formaction=d1 /></th>
+        <th><input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; inputName="firstButton" formaction=d2 /></th>
+        <th><input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; inputName="firstButton" formaction=d3 /></th>
+        <th><input type ="submit" value=&nbsp;&nbsp;&nbsp;&nbsp; inputName="firstButton" formaction=d4 /></th>
+    </tr>
+
+</table>
+
+<h1> {{test}} </h1>
 </body>
 </html>
