inputted basic 404 page, requires css-html linkage

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,13 +1,19 @@
-
-
-<div>
-    <aside><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4424790/Mirror.png" alt="404 Image" />
-    </aside>
-    <main>
-        <h1>Sorry!</h1>
-        <p>
-            Either you aren't cool enough to visit this page or it doesn't exist <em>. . . like your social life.</em>
-        </p>
-        <button onclick="window.location.href='/'">You can go now!</button>
-    </main>
-</div>
+<figure>
+    <div class="sad-mac"></div>
+    <figcaption>
+        <span class="sr-text">Error 404: Not Found</span>
+        <span class="e"></span>
+        <span class="r"></span>
+        <span class="r"></span>
+        <span class="o"></span>
+        <span class="r"></span>
+        <span class="_4"></span>
+        <span class="o"></span>
+        <span class="t"></span>
+        <span class="f"></span>
+        <span class="o"></span>
+        <span class="u"></span>
+        <span class="n"></span>
+        <span class="d"></span>
+    </figcaption>
+</figure>
