--- a/templates/404.html
+++ b/templates/404.html
@@ -8,6 +8,9 @@
         <span class="o"></span>
         <span class="r"></span>
         <span class="_4"></span>
+        <span class="_0"></span>
+        <span class="_4"></span>
+        <span class="n"></span>
         <span class="o"></span>
         <span class="t"></span>
         <span class="f"></span>
