--- a/templates/404.html
+++ b/templates/404.html
@@ -1,22 +1,26 @@
-<figure>
-    <div class="sad-mac"></div>
-    <figcaption>
-        <span class="sr-text">Error 404: Not Found</span>
-        <span class="e"></span>
-        <span class="r"></span>
-        <span class="r"></span>
-        <span class="o"></span>
-        <span class="r"></span>
-        <span class="_4"></span>
-        <span class="_0"></span>
-        <span class="_4"></span>
-        <span class="n"></span>
-        <span class="o"></span>
-        <span class="t"></span>
-        <span class="f"></span>
-        <span class="o"></span>
-        <span class="u"></span>
-        <span class="n"></span>
-        <span class="d"></span>
-    </figcaption>
-</figure>
+
+
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 ">
+                <div>
+                    <div class="four_zero_four_bg">
+                        <h1 class="text-center ">404</h1>
+                    </div>
+
+                    <div class="content_box_404 center">
+                        <h3>
+                            Looks like you're lost
+                        </h3>
+
+                        <p>the page you are looking for is not avaible!</p>
+
+                        <a href="/" class="link_404 btn btn-warning">Go to Home</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+{% endblock %}
