--- a/templates/404.html
+++ b/templates/404.html
@@ -1,4 +1,6 @@
-
+{% extends "otherpage.html" %}
+{% block title %} Error Page{% endblock %}
+{% block content %}
 
 <section>
     <div class="container">
@@ -23,3 +25,4 @@
         </div>
     </div>
 </section>
+{% endblock %}
