--- a/templates/404.html
+++ b/templates/404.html
@@ -16,7 +16,7 @@
                             Looks like you're lost
                         </h3>
 
-                        <p>the page you are looking for is not avaible!</p>
+                        <p>the page you are looking for is not available!</p>
 
                         <a href="/" class="link_404 btn btn-warning">Go to Home</a>
                     </div>
