minilab and readded my blueprint to main

--- a/templates/otherpage.html
+++ b/templates/otherpage.html
@@ -82,6 +82,12 @@ body {margin:0;;}
 
 <p>filler page for testing nav bar</p>
 
+
+<form>
+    <input type="submit" value='Check Boats Health' formaction=hp>
+</form>
+
+
 <table>
 
     <tr>
@@ -128,5 +134,8 @@ body {margin:0;;}
 
 
 <!-- style="margin-left:37.5%; margin-right:37.5%; width:25%; margin-top:4%;z-index: -2;position: absolute;" -->
+
+{{HP}}
+
 </body>
 </html>
