--- a/tylerminilab/templates/tylerminilab.html
+++ b/tylerminilab/templates/tylerminilab.html
@@ -2,9 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Marvel Heroes</title>
 </head>
 <body>
+<div class="jumbotron text-center row">
+    <div>
+        <h3>How many Marvel Superheroes do want to see you for the Make-A-Wish program?</h3>
+        <form id="fibForm" action="" method="POST" >
+            <input name="series" id="series" type="number" min="1" max="11" >
+            <button class="btn  my-2 my-sm-0 text-white bg-danger" type="submit"> Pick your heroes!</button>
 
+        </form>
+    </div>
+<div id="myDiv" class="col-md-6">
+        <h3>Your heroes are:</h3>
+    <div id='prova' style='display:none'>{{Marvel.list}}</div>
+        <script>
+            window.onload = function () {
+                    setTimeout(appeardiv,1000);
+                }
+                function appeardiv() {
+                    document.getElementById('prova').style.display= "block";
+                }
+        </script>
+
+
+
+</div>
+
+
+</div>
+</div>
+</div>
 </body>
 </html>
