--- a/kyleminilab/templates/kyleminilab.html
+++ b/kyleminilab/templates/kyleminilab.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kyle M. Mini Lab</title>
+    <title>Kyle Mini Lab</title>
 </head>
 <body>
 <div class="jumbotron text-center row">
