--- a/kyleminilab/templates/kyleminilab.html
+++ b/kyleminilab/templates/kyleminilab.html
@@ -16,10 +16,10 @@
     </div>
 
     <div id="myDiv" class="col-md-6">
-        <h3>Here are {{primeCheck.checking}} results:</h3>
+        <h3>Here are the results after checking {{primeCheck.count} numbers}:</h3>
 
-        <div id='prova' style='display:none'>{{primeCheck.primes}}</div>
-        <div id='prova' style='display:none'>{{primeCheck.composites}}</div>
+        <div id='prova' style='display:none'>Prime Numbers: {{primeCheck.primes}}</div>
+        <div id='prova' style='display:none'>Composite Numbers: {{primeCheck.composites}}</div>
 
         <script>
                 window.onload = function () {
