linked everyone's shit, only aidan's works for some reason

--- a/templates/home.html
+++ b/templates/home.html
@@ -74,10 +74,17 @@ body {margin:0;;}
     <b>
         <a class="active" href="/">Home</a>
         <a href="/otherpage">Otherpage</a>
-        <a  href="/movingimage">Moving Image</a>
+        <a href="/movingimage">Moving Image</a>
         <a href="/battleship" >Battleship</a>
+        <a href="/calvinminilab">Calvin Minilab</a>
+        <a href="/jamesminilab">James Minilab </a>
+        <a href="/kyleminilab">Kyle Minilab </a>
+        <a href="/tylerminilab">Tyler Minilab </a>
+        <a href="/aidanminilab">Aidan Minilab </a>
+
     </b>
 </div>
+
 
 <div class="text1">
     <h1 style="color: #006103;" > <font size="+50"> BattleShip<i>-Online</i> </font>  </h1>
