--- a/calvinminilab/templates/calvinminilab.html
+++ b/calvinminilab/templates/calvinminilab.html
@@ -2,9 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Calvin Mini Lab</title>
+    <title>Calvin Meat Mini Lab</title>
 </head>
 <body>
+<div class="jumbotron text-center row">
+    <div>
+        <h3>How many Meats do want??</h3>
+        <form id="fibForm" action="" method="POST" >
+            <input name="series" id="series" type="number" min="1" max="11" >
+            <button class="btn  my-2 my-sm-0 text-white bg-danger" type="submit"> Pick your Meats!</button>
+
+        </form>
+    </div>
+    <div id="myDiv" class="col-md-6">
+        <h3>Your Meats are:</h3>
+        <div id='prova' style='display:none'>{{meat.list}}</div>
+        <script>
+            window.onload = function () {
+                    setTimeout(appeardiv,1000);
+                }
+                function appeardiv() {
+                    document.getElementById('prova').style.display= "block";
+                }
+        </script>
+
+
+
+    </div>
+
+
+</div>
+</div>
+</div>
 
 </body>
 </html>
