--- a/calvinminilab/templates/calvinminilab.html
+++ b/calvinminilab/templates/calvinminilab.html
@@ -16,7 +16,7 @@
     </div>
     <div id="myDiv" class="col-md-6">
         <h3>Your Meats are:</h3>
-        <div id='prova' style='display:none'>{{meat.list}}</div>
+        <div id='prova' style='display:none'>{{Meat.list}}</div>
         <script>
             window.onload = function () {
                     setTimeout(appeardiv,1000);
