added collegeboard/minilab page separate from main project

--- a/templates/home.html
+++ b/templates/home.html
@@ -76,11 +76,7 @@ body {margin:0;;}
         <a href="/otherpage">Otherpage</a>
         <a href="/movingimage">Moving Image</a>
         <a href="/battleship" >Battleship</a>
-        <a href="/calvinminilab">Calvin Minilab</a>
-        <a href="/jamesminilab">James Minilab </a>
-        <a href="/kyleminilab">Kyle Minilab </a>
-        <a href="/tylerminilab">Tyler Minilab </a>
-        <a href="/aidanminilab">Aidan Minilab </a>
+        <a href="/easter" >Minilabs</a>
 
     </b>
 </div>
