--- a/calvinminilab/templates/calvinminilab.html
+++ b/calvinminilab/templates/calvinminilab.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
+{% extends "easter.html" %}
+{{ super() }}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Calvin Meat Mini Lab</title>
+    <title>{% block title %}Calvin's Meat Selection{% endblock %}</title>
 </head>
+{% block content %}
 <body>
 <div class="jumbotron text-center row">
     <div>
@@ -34,6 +37,6 @@
 </div>
 </div>
 </div>
-
+{% endblock %}
 </body>
 </html>
