--- a/templates/easter.html
+++ b/templates/easter.html
@@ -35,7 +35,7 @@
       <a class="nav-link" href="/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="calvinminilab">Calvin</a>
+      <a class="nav-link" href="{{ url_for('calvinminilab.index') }}">Calvin</a>
     </li>
     <li class="nav-item">
       <a class="nav-link active" href="aidanminilab">Aidan</a>
