--- a/minilabs/calvinminilab/templates/calvinminilab.html
+++ b/minilabs/calvinminilab/templates/calvinminilab.html
@@ -12,13 +12,13 @@
     <div>
         <h3>How many Meats do want??</h3>
         <form id="fibForm" action="" method="POST" >
-            <input name="series" id="series" type="number" min="1" max="11" >
+            <input name="series" id="series" type="number" min="0" max="12" >
             <button class="btn  my-2 my-sm-0 text-white bg-danger" type="submit"> Pick your Meats!</button>
 
         </form>
     </div>
     <div id="myDiv" class="col-md-6">
-        <h3>Your Meats are:</h3>
+        <h3>Your meats for this week are:</h3>
         <div id='prova' style='display:none'>{{Meat.list}}</div>
         <script>
             window.onload = function () {
