--- a/minilabs/calvinminilab/templates/landingpage.html
+++ b/minilabs/calvinminilab/templates/landingpage.html
@@ -11,7 +11,7 @@
 <h1>Calvin Mini Lab Location</h1>
 <a href="{{ url_for('calvinminilab.meatgrinder') }}">List Lab</a>
 <br>
-<a href="{{ url_for('calvinminilab.bubbleSort') }}">Bubble Sort Lab</a>
+<a href="{{ url_for('calvinminilab.bubblesort') }}">Bubble Sort Lab</a>
 </body>
 {% endblock %}
 </html>
