--- a/minilabs/tylerminilab/templates/tylerminilab.html
+++ b/minilabs/tylerminilab/templates/tylerminilab.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+{% extends "easter.html" %}
 <head>
     <meta charset="UTF-8">
     <title>Marvel Heroes</title>
 </head>
 <body>
+
 <div class="jumbotron text-center row">
     <div>
         <h3>How many Marvel Superheroes do want to see you for the Make-A-Wish program?</h3>
