--- a/templates/easter.html
+++ b/templates/easter.html
@@ -47,7 +47,7 @@
       <a class="nav-link active" href="kyleminilab">Kyle</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="tylerminilab">Tyler</a>
+      <a class="nav-link active" href="{{ url_for('tylerminilab.index') }}">Tyler</a>
     </li>
 
   </ul>
