Database Made, minilab bubblesort added, prep for deplyment

--- a/templates/easter.html
+++ b/templates/easter.html
@@ -41,7 +41,7 @@
       <a class="nav-link active" href="aidanminilab">Aidan</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="jamesminilab">James</a>
+      <a class="nav-link active" href="/jamesm">James</a>
     </li>
     <li class="nav-item">
       <a class="nav-link active" href="kyleminilab">Kyle</a>
