--- a/templates/home.html
+++ b/templates/home.html
@@ -75,7 +75,7 @@ body {margin:0;;}
         <a class="active" href="/">Home</a>
         <a href="/otherpage">Otherpage</a>
         <a href="/movingimage">Moving Image</a>
-        <a href="/battleship" >Battleship</a>
+        <a href="/Blogin" >Battleship</a>
         <a href="/easter" >Minilabs</a>
 
     </b>
