--- a/templates/otherpage.html
+++ b/templates/otherpage.html
@@ -76,7 +76,7 @@ body {margin:0;;}
         <a href="/">Home</a>
         <a class="active"  href="/otherpage">Otherpage</a>
         <a  href="/movingimage">Moving Image</a>
-        <a href="/battleship" >Battleship</a>
+        <a href="/Blogin" >Battleship</a>
     </b>
 </div>
 
