--- a/templates/Battleship.html
+++ b/templates/Battleship.html
@@ -75,41 +75,42 @@ body {margin:0;;}
         <a href="/">Home</a>
         <a href="/otherpage">Otherpage</a>
         <a  href="/movingimage">Moving Image</a>
-        <a class="active" href="/battleship" >Battleship</a>
+        <a class="active" href="/Blogin" >Battleship</a>
     </b>
 </div>
 
 
-<table>
 
-    <tr>
-        <th>1</th>
-        <th>2</th>
-        <th>3</th>
-        <th>4</th>
-        <th>5</th>
-        <th>6</th>
-        <th>7</th>
-        <th>8</th>
-        <th>9</th>
-        <th>10</th>
-    </tr>
+<!--
+<form action="#" method="POST">
+    <input type="email" name="'email" placeholder="Enter Email" value="{{email if email}}">
+    <input type="submit" value="submit">
+</form>
+-->
 
-    <tr>
-        <td>1</td>
-        <td> 2</td>
-        <td> 3</td>
-        <td> 4</td>
-        <td> 5</td>
-        <td> 6</td>
-        <td> 7</td>
-        <td> 8</td>
-        <td> 9</td>
-        <td> 10</td>
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        {% for msg in messages %}
+            <p>{{msg}}</p>
+        {% endfor %}
+    {% endif%}
+{% endwith %}
 
-    </tr>
 
-</table>
+
+<form action="#" method="post">
+    <p>Name:</p>
+    <p><input type="text" name="nm"></p>
+    <p><input type="submit" value="submit"></p>
+</form>
+
+
+<p>&nbsp</p>
+
+
+<button> <a href="/Blogin">Login</a></button>
+<button> <a href="/logout">Logout</a></button>
+<button> <a href="/user">Profile Page</a></button>
 
 
 </body>
