forgot to commit stuff

--- a/minilabs/calvinminilab/templates/bubblesort.html
+++ b/minilabs/calvinminilab/templates/bubblesort.html
@@ -38,7 +38,9 @@
               <input style="margin-bottom: 10px" name="user_input4" type="number">
               <input style="margin-bottom: 10px" name="user_input5" type="number">
             </g>
+            <br>
 
+            <input style="margin-bottom: 10px" type="submit" class="button" value="Submit">
           </form>
         </div>
       </div>
