--- a/templates/easter.html
+++ b/templates/easter.html
@@ -38,13 +38,13 @@
       <a class="nav-link" href="{{ url_for('calvinminilab.index') }}">Calvin</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="aidanminilab">Aidan</a>
+      <a class="nav-link active" href="/aidanminilab">Aidan</a>
     </li>
     <li class="nav-item">
       <a class="nav-link active" href="/jamesm">James</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="kyleminilab">Kyle</a>
+      <a class="nav-link active" href="/kyleminilab">Kyle</a>
     </li>
     <li class="nav-item">
       <a class="nav-link active" href="{{ url_for('tylerminilab.index') }}">Tyler</a>
