--- a/templates/easter.html
+++ b/templates/easter.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-sm bg-light navbar-light">
+<!--<nav class="navbar navbar-expand-sm bg-light navbar-light">
   <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link" href="/">Home</a>
@@ -45,13 +45,38 @@
     </li>
     <li class="nav-item">
       <a class="nav-link active" href="/kyleminilab">Kyle</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="{{ url_for('tylerminilab.index') }}">Tyler</a>
-    </li>
+    </li> -->
+<div class="navbar">
+    <div class="dropdown">
+        <button class="dropbtn" onclick="myFunction()">Tyler
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content" id="myDropdown">
+          <a href="{{url_for('tylerminilab.minilab')}}">Link 1</a>
+          <a href="{{url_for('tylerminilab.bubblesort')}}">Link 2</a>
+        </div>
+      </div>
+
 
   </ul>
 </nav>
+</div>
+<script>
+
+function myFunction() {
+  document.getElementById("myDropdown").classList.toggle("show");
+}
+
+
+window.onclick = function(e) {
+  if (!e.target.matches('.dropbtn')) {
+  var myDropdown = document.getElementById("myDropdown");
+    if (myDropdown.classList.contains('show')) {
+      myDropdown.classList.remove('show');
+    }
+  }
+}
+</script>
 {% block content %}
 {% endblock %}
 </body>
