Tyler Minilab improved

--- a/minilabs/tylerminilab/templates/tylerhomepage.html
+++ b/minilabs/tylerminilab/templates/tylerhomepage.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 {% block content %}
-    <a href = {{url_for('tylerminilab.minilab')}}>Tyler's Mini Lab</a>
+    <a href = {{url_for('tylerminilab.minilab')}}>Tyler's Class Lab</a>
 <br>
     <a href = {{url_for('tylerminilab.bubblesort')}}>Tyler's Bubble Sort</a>
 {% endblock %}
