--- a/minilabs/tylerminilab/templates/tylerminilab.html
+++ b/minilabs/tylerminilab/templates/tylerminilab.html
@@ -4,21 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Marvel Heroes</title>
+    <style>
+        .single {
+            background-color: #000000;
+        }
+    </style>
 </head>
 <body>
-
+{% block content %}
+<div class="container">
+<div class="center-block" style="margin: 2% 5% 5%; font-family: gilroy,serif;">
 <div class="jumbotron text-center row">
-    <div>
-        <h3>How many Marvel Superheroes do want to see you for the Make-A-Wish program?</h3>
+    <div class="col-md-5">
+        <div id="user" style="background-color: #8FBC8F">
+
         <form id="fibForm" action="" method="POST" >
-            <input name="series" id="series" type="number" min="1" max="11" >
-            <button class="btn  my-2 my-sm-0 text-white bg-danger" type="submit"> Pick your heroes!</button>
+            <label style="color: #000000"><b>How many Marvel Superheroes do want to see you for the Make-A-Wish program?</b></label>
+                <input style="margin-bottom: 10px" name="series" id="series" type="number" min="1" max="11" >
+            <br>
+                <input style="margin-bottom: 10px" type="submit" class="button" value="Pick Your Heroes!">
 
         </form>
+        </div>
     </div>
-<div id="myDiv" class="col-md-6">
-        <h3>Your heroes are:</h3>
-    <div id='prova' style='display:none'>{{Marvel.list}}</div>
+<div id="myDiv" class="col-md-5">
+    <label><b>Your heroes are:</b></label>
+    <div id='prova' style="background-color: #8FBC8F">{{Marvel.list}}</div>
         <script>
             window.onload = function () {
                     setTimeout(appeardiv,1000);
@@ -29,12 +40,14 @@
         </script>
 
 
+    </div>
+
 
 </div>
-
-
 </div>
 </div>
 </div>
+</div>
+{% endblock %}
 </body>
 </html>
