Mini Lab homepage improved

--- a/minilabs/aidanminilab/templates/aidanminilab.html
+++ b/minilabs/aidanminilab/templates/aidanminilab.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Mini Lab</title>
 </head>
 <body>
+{% extends "LabNav.html" %}
+{% block content %}
     <div class="jumbotron text-center row">
         <div>
             <h3>How many leg excersises do you want to do?</h3>
@@ -41,5 +44,6 @@
     </div>
     </div>
     </div>
+{% endblock %}
 </body>
 </html>
