--- a/minilabs/aidanminilab/templates/bubblesort.html
+++ b/minilabs/aidanminilab/templates/bubblesort.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Bubble Sort</title>
 </head>
 <body>
+{% extends "LabNav.html" %}
+{% block content %}
 <div class="container">
 
     <div class="center-block">
@@ -42,5 +45,6 @@
         </div>
     </div>
 </div>
+{% endblock %}
 </body>
 </html>
