--- a/minilabs/tylerminilab/templates/tylerbubblesort.html
+++ b/minilabs/tylerminilab/templates/tylerbubblesort.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends "easter.html" %}
+
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Bubble Sort{% endblock %}</title>
@@ -11,7 +11,7 @@
         }
     </style>
 </head>
-
+{% extends "LabNav.html" %}
 {% block content %}
 <div class="container">
 
