--- a/minilabs/tylerminilab/templates/tylerhomepage.html
+++ b/minilabs/tylerminilab/templates/tylerhomepage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends "easter.html" %}
+
 
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+{% extends "LabNav.html" %}
 {% block content %}
     <a href = {{url_for('tylerminilab.minilab')}}>Tyler's Class Lab</a>
 <br>
