--- a/minilabs/tylerminilab/templates/tylerminilab.html
+++ b/minilabs/tylerminilab/templates/tylerminilab.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-{% extends "easter.html" %}
+
 <head>
     <meta charset="UTF-8">
     <title>Marvel Heroes</title>
@@ -11,6 +11,7 @@
     </style>
 </head>
 <body>
+{% extends "LabNav.html" %}
 {% block content %}
 <div class="container">
 <div class="center-block" style="margin: 2% 5% 5%; font-family: gilroy,serif;">
