--- a/minilabs/calvinminilab/templates/landingpage.html
+++ b/minilabs/calvinminilab/templates/landingpage.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-{% extends "easter.html" %}
+
 {{ super() }}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Calvin{% endblock %}</title>
 </head>
-{% block content %}
+
 <body  style="margin-left: 15px">
+{% extends "LabNav.html" %}
+{% block content %}
 <h1>Calvin Mini Lab Location</h1>
 <a href="{{ url_for('calvinminilab.meatgrinder') }}">List Lab</a>
 <br>
