--- a/minilabs/kyleminilab/templates/kyleminilab.html
+++ b/minilabs/kyleminilab/templates/kyleminilab.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <title>Kyle Mini Lab</title>
 </head>
 <body>
+{% extends "LabNav.html" %}
+{% block content %}
 <div class="jumbotron text-center row">
     <div>
         <h3>What range of numbers to you want to test for primes and composites?</h3>
@@ -37,5 +40,6 @@
 </div>
 </div>
 </div>
+{% endblock %}
 </body>
 </html>
