--- a/templates/easter.html
+++ b/templates/easter.html
@@ -3,60 +3,27 @@
 <html lang="en">
 <head>
 
-  <title>Easter Egg - {% block title %}{% endblock %}</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <link rel="icon" href="../static/pixel_art_pizza_by_chinyiun_de3ewdq-fullview.gif">
-  {% block head %}
-  {% endblock %}
+  <title>Easter Egg</title>
+  <meta>
+<style>
+body {
+    background-image: url({{url_for('static', filename='img/EasterBackground.gif') }});
+            background-size: 100%;
+            background-repeat: no-repeat;
+    }
+p {
+  font-family: "Copperplate", fantasy;
+  font-size: 350%;
+  text-align: center;
+  color: #FFFFFF;
+  }
 
-  <style>
-        .icon{
-            border-radius: 50%;
-            background-color: seagreen;
-            height: 50px;
-            width: 50px;
-        }
-
-        .icon:hover {
-            background-color: #6969AC;
-        }
-    </style>
+</style>
 </head>
 <body>
-
-<nav class="navbar navbar-expand-sm bg-light navbar-light">
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="/">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('calvinminilab.index') }}">Calvin</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="/aidanminilab">Aidan</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="/jamesm">James</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="/kyleminilab">Kyle</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link active" href="{{url_for('tylerminilab.index')}}">Tyler</a>
-    </li>
-
-
-
-  </ul>
-</nav>
-</div>
-
+{% extends "LabNav.html" %}
 {% block content %}
+<p>Check out some of the Mini Labs the creators of this website have done!</p>
 {% endblock %}
 </body>
 </html>
