--- a/templates/home.html
+++ b/templates/home.html
@@ -70,16 +70,7 @@ body {margin:0;;}
 }
 
 </style>
-<div class="topnav" >
-    <b>
-        <a class="active" href="/">Home</a>
-        <a href="/otherpage">Otherpage</a>
-        <a href="/movingimage">Moving Image</a>
-        <a href="/Blogin" >Battleship</a>
-        <a href="/easter" >Minilabs</a>
 
-    </b>
-</div>
 
 
 <div class="text1">
@@ -94,4 +85,5 @@ body {margin:0;;}
 
 
 </body>
+{% extends "navbar.html" %}
 </html>
