--- a/templates/register.html
+++ b/templates/register.html
@@ -1,18 +1,17 @@
 {% extends "navbar.html" %}
-{% block title %}Flask Test - Login {% endblock %}
+{% block title %}Flask Test - Login{% endblock %}
 {% block content %}
 <style>
     body {
-        background-image: url({{url_for('static', filename='img/userbg.jpg')}});
-        background-size: cover;
-        background-repeat: no-repeat;
+
     }
 
-    div{
+
+        div{
         text-align: center;
-    }
+        }
 
-        .loginbox {
+        #loginbox {
             width: 300px;
             height: 300px;
             text-align: center;
@@ -43,22 +42,19 @@
 
     </style>
 {% with messages = get_flashed_messages() %}
-    {% if messages %}
-        {% for msg in messages %}
-            <p id="message" class="lead">{{msg}}</p>
-        {% endfor %}
-    {% endif %}
+{% if messages %}
+{% for msg in messages %}
+<p id="message" class="lead">{{msg}}</p>
+{% endfor %}
+{% endif %}
 {% endwith %}
-
-<div class="loginbox">
+<div id="loginbox">
     <form action="#" method="post">
         <p class="lead">Username:</p>
         <p><input type="text" name="username" /></p>
         <p class="lead">Password:</p>
-        <p class="lead"><input type="text" name="password" /></p>
-        <p><input type="submit" class="btn btn btn-dark" value="submit" /></p>
-        <a class="btn btn btn-dark" href="/register" role="button">Create new account</a>
+        <p><input type="text" name="password" /></p>
+        <p><input type="submit" value="submit" class="btn btn btn-dark"/></p>
     </form>
 </div>
-
 {% endblock %}
