--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -30,9 +30,12 @@
         </li>
 
         <li class = "nav-item">
-            <a href = "/user" class = "nav-link">Login</a>
+            <a href = "/MessageBoard" class = "nav-link">Message Board</a>
         </li>
 
+        <li class = "nav-item">
+            <a href = "/user" class = "nav-link">Login</a>
+        </li>
 
         {% if insession == True %}
         <li class = "nav-item">
