fixed my mini labs

--- a/templates/LabNav.html
+++ b/templates/LabNav.html
@@ -141,8 +141,8 @@ body {margin:0;font-family:Arial}
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-            <a href="#">Class Lab</a>
-            <a href="#">Bubble Sort</a>
+            <a href="{{url_for('aminilab_bp.index')}}">Class Lab</a>
+            <a href="{{url_for('aminilab_bp.bubbleSort')}}">Bubble Sort</a>
 
         </div>
     </div>
