--- a/templates/user.html
+++ b/templates/user.html
@@ -88,7 +88,7 @@ body {margin:0;;}
 <p>Email:{{email}}</p>
 
 
-<form action="#" method="POST">
+<form action="user" method="POST">
     <input type="email" name="email" placeholder="Enter Email" value="Input/Change Email Here">
     <input type="submit" value="submit">
 </form>
@@ -99,7 +99,31 @@ body {margin:0;;}
 <button> <a href="/logout">Logout</a></button>
 <button> <a href="/user">Profile Page</a></button>
 
+<p>&nbsp</p>
+<p>&nbsp</p>
+
+<h3>Messages</h3>
+
+<p>{{user}}'s Current Message: </p>
+
+
+<p>Send A Message To A User</p>
+<form action="message" method="POST">
+    <input type="text" name="msuser" placeholder="Enter User">
+    <input type="text" name="msguser" placeholder="Enter Message">
+    <input type="submit" value="submit">
+</form>
+
+{{usr}}
+{{ussr}}
+
+<p>private message form a user:</p>{{message}}
 {% endblock %}
+
+
+
+
+
 </body>
 
 </html>
