Made working private messaging system between users

--- a/templates/MovingImage.html
+++ b/templates/MovingImage.html
@@ -92,7 +92,14 @@ body {margin:0}
 
 <p>There is a second larger boat to have the smaller boat go over the other image</p>
 
+<p>test</p>
+{{battleshiplocation}}
+{{battleshiplocation_o}}
 {% endblock %}
+
+
+
+
 </body>
 
 </html>
