added more about us content

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -12,7 +12,7 @@
             <!-- <img src=""> -->
             <p>James</p>
             <ul>
-                <li></li>
+                <li>Student interesting in comp sci and web development, enjoys critical thinking, loves hard challenges</li>
             </ul>
         </div>
         <div class="column">
@@ -28,7 +28,7 @@
             <!-- <img src=""> -->
             <p>Tyler</p>
             <ul>
-                <li></li>
+                <li>I joined Comp Sci because I was interested in how to make things like games and websites, and over the course of the past year, I have learned a lot about Python, HTML, JavaScript, CSS, etc. The coding language that I like to use the most, though is JavaScript</li>
             </ul>
 
         </div>
@@ -43,7 +43,7 @@
             <!-- <img src=""> -->
             <p>Aidan</p>
             <ul>
-                <li>I am a 17-year old Junior at Del Norte High School who is currently taking AP Computer Science Principles</li>
+                <li>I am a 17-year old Junior at Del Norte High School who is currently taking AP Computer Science Principles, trying to learn more about coding and what it is like being in the computer science work field</li>
             </ul>
         </div>
     </div>
