--- a/templates/aboutusbase.html
+++ b/templates/aboutusbase.html
@@ -19,13 +19,21 @@
 </div>
 <body>
 
+<!-- css background
 
+body{
+        background:linear-gradient(rgba(103, 135, 211, .6), rgba(144, 25, 166, .6)), url(https://i.pinimg.com/originals/b8/e2/70/b8e270b7237f2f4c3a5905e6a3ca5f63.png);
+        background-size: cover;
+        animation: grow 60s linear .5s infinite;
+    }
+-->
 
 {% block title %} {% endblock %}
 {% block body %} {% endblock %}
 
 <style>
-    body {
+
+    body{
         background:linear-gradient(rgba(103, 135, 211, .6), rgba(144, 25, 166, .6)), url(https://i.pinimg.com/originals/b8/e2/70/b8e270b7237f2f4c3a5905e6a3ca5f63.png);
         background-size: cover;
         animation: grow 60s linear .5s infinite;
