--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -34,8 +34,17 @@
         </li>
 
         <li class = "nav-item">
+            <a href = "/news" class = "nav-link">News</a>
+        </li>
+
+        <li class = "nav-item">
+            <a href = "/aboutus" class = "nav-link">About Us</a>
+        </li>
+
+        <li class = "nav-item">
             <a href = "/user" class = "nav-link">Login</a>
         </li>
+
 
         {% if insession == True %}
         <li class = "nav-item">
