--- a/templates/MessageBoard.html
+++ b/templates/MessageBoard.html
@@ -49,7 +49,7 @@
         var messDiv=document.createElement("div");
         messDiv.setAttribute("style","width:450px;height:30px;border:2px dotted #808080;margin-bottom:5px;");
         {
-            //This code block is used to store the build messDiv Code for content:Message content and delete key style
+
             var messCon = document.createElement("div");
             messCon.setAttribute("style","float:left;width:350px;height=30px;line-height:30px;overflow:auto;");
             var del = document.createElement("a");
@@ -60,11 +60,11 @@
             messDiv.appendChild(del);
             messCon.innerHTML=messCol.value;
             del.onclick=function(){
-                con.removeChild(this.parentNode);   //Let parent element content Delete child element's messDiv
+                con.removeChild(this.parentNode);
             }
         }
         con.appendChild(messDiv);
-        messCol.value="";   //Clear the character content of the input box
+        messCol.value="";   
     }
 </script>
 {% endblock %}
