--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,16 +13,9 @@
         <a class = "navbar-brand">Battleship Website</a>
         <!-- homepage -->
         <a href = "/" class = "nav-link">Home</a>
-        <li class = "nav-item">
-            <a href = "" class = "nav-link">Battleship</a>
-        </li>
 
         <li class = "nav-item">
-            <a href = "/otherpage" class = "nav-link">Otherpage</a>
-        </li>
-
-        <li class = "nav-item">
-            <a href = "/movingimage" class = "nav-link">Moving Image</a>
+            <a href = "/otherpage" class = "nav-link">Battleship</a>
         </li>
 
         <li class = "nav-item">
@@ -44,7 +37,6 @@
         <li class = "nav-item">
             <a href = "/user" class = "nav-link">Login</a>
         </li>
-
 
         {% if insession == True %}
         <li class = "nav-item">
