Kyle "About Us"

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -19,7 +19,7 @@
             <!-- <img src=""> -->
             <p>Calvin</p>
             <ul>
-                <li></li>
+                <li>Del Norte High School Senior, contracted senioritis</li>
 
             </ul>
 
@@ -36,7 +36,7 @@
             <!-- <img src=""> -->
             <p>Kyle</p>
             <ul>
-                <li></li>
+                <li>A Junior at Del Norte High School, joined AP Comsci due to interest in the field as a potential career and having previous programming experience.  Planning to continue with AP ComSci A next year. Python one trick</li>
             </ul>
         </div>
         <div class="column">
